--- a/src/css/style.css
+++ b/src/css/style.css
@@ -157,6 +157,20 @@ blink, .blink {
 	border-image-slice: 1;
 }
 
+.pid-tuning-box {
+	width: 75%;
+	height: 20%;
+	margin: auto;
+	align: center;
+	
+	border: 15px solid transparent;
+	-moz-border-image: -moz-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);
+	-webkit-border-image: -webkit-linear-gradient(top, #3acfd5 0%, #3a4ed5 100%);
+	border-image: linear-gradient(to bottom, #3acfd5 0%, #3a4ed5 100%);
+	
+	border-image-slice: 1;
+}
+
 /* the enabled status for autonomous config options*/
 .auto-left {
 	display: block;
